CLOUDSDK_CORE_DISABLE_PROMPTS=1 typo error

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
 env:
   global:
     - SHA=$(git rev-parse HEAD)
-    - CLOUDSDK_SDK_CORE_DISABLE_PROMPT=1
+    - CLOUDSDK_CORE_DISABLE_PROMPTS=1
 before_install:
   - openssl aes-256-cbc -K $encrypted_9f3b5599b056_key -iv $encrypted_9f3b5599b056_iv -in service-account.json.enc -out service-account.json -d
   - curl https://sdk.cloud.google.com | bash > /dev/null;
@@ -19,7 +19,7 @@ before_install:
 
   #CALL SCRIPT TESTS
 script:
-  - docker run -e CI=true jeffersonpino/react-test npm run test
+  - docker run -e CI=true jeffersonpino/react-test npm test
 
   #CALL CONSTRUCTION OF CONTAINER
 deploy:
